Fix build command

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,7 +28,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - run: npm ci
-      - run: npm run build --base-href /pages-demo-angular/
+      - run: npx ng build --base-href /pages-demo-angular/
       - run: cp dist/index.html dist/404.html
 
       - name: Deploy
