--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,11 +29,11 @@ jobs:
 
       - run: npm ci
       - run: npx ng build --base-href /pages-demo-angular/
-      - run: cp dist/index.html dist/404.html
+      - run: cp dist/angular-app/index.html dist/angular-app/404.html
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./dist/angular-app/
